--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -16,6 +16,224 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from scipy.stats.stats import pearsonr\n",
+    "import scipy as sp\n",
+    "from sklearn import tree\n",
+    "import xgboost as xgb\n",
+    "from sklearn.metrics import mean_squared_error, accuracy_score, f1_score, roc_auc_score\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import RandomForestRegressor, RandomForestClassifier\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn import linear_model\n",
+    "from sklearn.linear_model import Lasso, Ridge, LinearRegression, LogisticRegression\n",
+    "from sklearn.utils import resample\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import metrics\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from scipy.stats import shapiro\n",
+    "from scipy.stats import normaltest\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.preprocessing import StandardScaler, RobustScaler, MinMaxScaler\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import r2_score\n",
+    "from scipy import stats\n",
+    "plt.style.use('seaborn')\n",
+    "%matplotlib inline\n",
+    "pd.set_option('display.max_columns', 1000)\n",
+    "pd.set_option('display.max_rows', 1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = pd.read_csv('corona_tweets_01.csv')\n",
+    "df2 = pd.read_csv('corona_tweets_02.csv')\n",
+    "df3 = pd.read_csv('corona_tweets_03.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df1,df2,df3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_id</th>\n",
+       "      <th>sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1240727808080412673</td>\n",
+       "      <td>0.357143</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1240727808005079041</td>\n",
+       "      <td>0.116071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1240727808340414464</td>\n",
+       "      <td>-0.050000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1240727808629813248</td>\n",
+       "      <td>-0.714286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1240727808617230336</td>\n",
+       "      <td>0.700000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              tweet_id  sentiment\n",
+       "0  1240727808080412673   0.357143\n",
+       "1  1240727808005079041   0.116071\n",
+       "2  1240727808340414464  -0.050000\n",
+       "3  1240727808629813248  -0.714286\n",
+       "4  1240727808617230336   0.700000"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2475980, 2)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting tweepy\n",
+      "  Downloading tweepy-3.8.0-py2.py3-none-any.whl (28 kB)\n",
+      "Requirement already satisfied: PySocks>=1.5.7 in /Users/sullivanmyer/opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from tweepy) (1.7.1)\n",
+      "Requirement already satisfied: six>=1.10.0 in /Users/sullivanmyer/opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from tweepy) (1.12.0)\n",
+      "Requirement already satisfied: requests>=2.11.1 in /Users/sullivanmyer/opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from tweepy) (2.22.0)\n",
+      "Collecting requests-oauthlib>=0.7.0\n",
+      "  Downloading requests_oauthlib-1.3.0-py2.py3-none-any.whl (23 kB)\n",
+      "Requirement already satisfied: idna<2.9,>=2.5 in /Users/sullivanmyer/opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from requests>=2.11.1->tweepy) (2.8)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/sullivanmyer/opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from requests>=2.11.1->tweepy) (2019.11.28)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /Users/sullivanmyer/opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from requests>=2.11.1->tweepy) (1.24.2)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /Users/sullivanmyer/opt/anaconda3/envs/learn-env/lib/python3.6/site-packages (from requests>=2.11.1->tweepy) (3.0.4)\n",
+      "Collecting oauthlib>=3.0.0\n",
+      "  Downloading oauthlib-3.1.0-py2.py3-none-any.whl (147 kB)\n",
+      "\u001b[K     |████████████████████████████████| 147 kB 10.6 MB/s eta 0:00:01\n",
+      "\u001b[?25hInstalling collected packages: oauthlib, requests-oauthlib, tweepy\n",
+      "Successfully installed oauthlib-3.1.0 requests-oauthlib-1.3.0 tweepy-3.8.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install tweepy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tweepy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'tweepy' from '/Users/sullivanmyer/opt/anaconda3/envs/learn-env/lib/python3.6/site-packages/tweepy/__init__.py'>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
